feat: adicionando identity no projeto

--- a/Catalogo.Api/appsettings.json
+++ b/Catalogo.Api/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "ValidAudience": "http://localhost:5000",
+    "ValidIssuer": "http://localhost:5001",
+    "SecretKey": "8h7H9-98j,_j*(<H*M98YH7Ng67nt9bf557698MH709j9-8=k9l0-9j8k7h6DR5V$wsx5aC",
+    "TokenValidityInMinutes": 30,
+		"RefreshTokenValidityInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
